Resolved the java build error